Worked on user form

--- a/bms-admin/src/main/resources/messages.properties
+++ b/bms-admin/src/main/resources/messages.properties
@@ -1,5 +1,29 @@
-error.username.required=Username required!!
-error.password.required=Password required!!
-error.username.password.required=Username and password required!!
-error.invalid.credentials=Invalid username or password!!
-error.user.not.exist=User is not exist!!
+##################################################
+######   FORM VALIDATION ERROR MESSAGE
+##################################################
+
+error.invalid.credentials=Invalid username or password
+error.user.not.exist=User is not exist
+
+error.username.required=Username is required
+error.username.invalid=Username must contains only letter(upper/lower) or number
+error.username.not.available=Username {1} is already taken
+error.password.required=Password is required
+error.password.invalid=Password must contains only letter(upper/lower), number or special characters(!@#$%^&*+=) and must contains at least one lowercase letter, one uppercase letter, one number and one special character.
+error.repassword.required=Password confirmation is required
+error.confirmpassword.not.matched=Password does not match the confirm password
+error.username.password.required=Username and password are required
+
+error.field.required=This field is required
+error.firstname.required=First name is required
+error.lastname.required=Last name is required
+error.gender.required=Gender is required
+
+error.email.required=Email is required
+error.email.not.available=Email {1} is already used
+error.email.invalid=Valid email required
+error.phonenumber.required=Phone number is required
+error.phonenumber.invalid=Phone number must contains only digit.
+error.phonenumber.not.available=Phone number {1} is already used
+error.countrycode.required=Country code is required
+error.country.required=Country is required
