Added user form submit status message

--- a/bms-admin/src/main/resources/messages.properties
+++ b/bms-admin/src/main/resources/messages.properties
@@ -27,3 +27,15 @@ error.phonenumber.invalid=Phone number must contains only digit.
 error.phonenumber.not.available=Phone number {1} is already used
 error.countrycode.required=Country code is required
 error.country.required=Country is required
+
+##################################################
+######   CONFIRMATION MESSAGE
+##################################################
+confirm.create.success={0} created successfully.
+confirm.create.failed=Failed to create {0}, try again.
+confirm.save.success={0} saved successfully.
+confirm.save.failed=Failed to save {0}, try again.
+confirm.update.success={0} updated successfully.
+confirm.update.failed=Failed to update {0}, try again.
+confirm.delete.success={0} deleted successfully.
+confirm.delete.failed=Failed to delete {0}, try again.
