Duplicate checking in setup form

--- a/bms-admin/src/main/resources/messages.properties
+++ b/bms-admin/src/main/resources/messages.properties
@@ -28,9 +28,13 @@ error.phonenumber.not.available=Phone number {1} is already used
 error.countrycode.required=Country code is required
 error.country.required=Country is required
 
+error.returned=Error returned : {0}
+error.duplicate.entry=Duplicate entry is not allowed, please enter unique {0}.
+
 ##################################################
 ######   CONFIRMATION MESSAGE
 ##################################################
+
 confirm.create.success={0} created successfully.
 confirm.create.failed=Failed to create {0}, try again.
 confirm.save.success={0} saved successfully.
@@ -39,3 +43,4 @@ confirm.update.success={0} updated successfully.
 confirm.update.failed=Failed to update {0}, try again.
 confirm.delete.success={0} deleted successfully.
 confirm.delete.failed=Failed to delete {0}, try again.
+
