Added Hotel create, view & list page

--- a/bms-admin/src/main/resources/messages.properties
+++ b/bms-admin/src/main/resources/messages.properties
@@ -28,6 +28,12 @@ error.phonenumber.not.available=Phone number {1} is already used
 error.countrycode.required=Country code is required
 error.country.required=Country is required
 
+error.title.required=Title is required
+error.numberoffloor.required=No of floor must be greater than zero.
+error.city.required=City is required
+error.checkintime.required=Check in time is required
+error.checkouttime.required=Check out time is required
+
 error.returned=Error returned : {0}
 error.duplicate.entry=Duplicate entry is not allowed, please enter unique {0}.
 
