Added Group and Role option in user creation form

--- a/bms-admin/src/main/resources/messages.properties
+++ b/bms-admin/src/main/resources/messages.properties
@@ -27,6 +27,8 @@ error.phonenumber.invalid=Phone number must contains only digit.
 error.phonenumber.not.available=Phone number {1} is already used
 error.countrycode.required=Country code is required
 error.country.required=Country is required
+error.group.required=Group is required
+error.role.required=Role is required
 
 error.title.required=Title is required
 error.numberoffloor.required=No of floor must be greater than zero.
