Added MaxChildAge, ChildCapacity, NumberOfBed column

--- a/bms-admin/src/main/resources/messages.properties
+++ b/bms-admin/src/main/resources/messages.properties
@@ -32,6 +32,7 @@ error.role.required=Role is required
 
 error.title.required=Title is required
 error.numberoffloor.required=No of floor must be greater than zero.
+error.maxchildage.required=Maximum Child Age must be greater than zero.
 error.city.required=City is required
 error.checkintime.required=Check in time is required
 error.checkouttime.required=Check out time is required
